# CryptoGuardClient

./: .gitignore  CHANGELOG.md  DEPLOYMENT_TRACKER.md  LAUNCH_SUBMISSIONS.md  README.md  mcp.json  pyproject.toml  server.json  smithery.yaml
cryptoguard/: __init__.py  client.py  exceptions.py
examples/: portfolio_scan.py  rug_check.py  scan_token.py  search_and_free_tier.py  validate_trade.py
mcp_server/: README.md  __init__.py  server.py
tests/: test_client.py  test_mcp_server.py
