[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CryptoGuardClient"
version = "0.6.0"
description = "Python SDK for CryptoGuard — crypto risk scanner that detected every major crash in backtesting, 27 days early"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Greg Partin"},
]
keywords = [
    "crypto",
    "trading",
    "risk-assessment",
    "anomaly-detection",
    "rug-pull",
    "mcp",
    "model-context-protocol",
    "waveguard",
    "x402",
    "defi",
    "token-validation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Lightweight — only requests needed to talk to the API
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
mcp = [
    "requests>=2.28",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/gpartin/CryptoGuardClient"
Documentation = "https://github.com/gpartin/CryptoGuardClient/tree/main/docs"
Repository = "https://github.com/gpartin/CryptoGuardClient"
Issues = "https://github.com/gpartin/CryptoGuardClient/issues"
API = "https://gpartin--cryptoguard-api-fastapi-app.modal.run/docs"

[project.scripts]
cryptoguard-mcp = "mcp_server.server:main"

[tool.setuptools.packages.find]
include = ["cryptoguard*", "mcp_server*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
